--- a/index.html
+++ b/index.html
@@ -1,324 +1,46 @@
-<!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My portfolio</title>
+    <title>portfolio</title>
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <header>
-      <nav>
-        <ul>
-          <li>
-            <a href="index1.html">home</a>
-          </li>
-          <li>
-            <a href="#about">about</a>
-          </li>
-          <li>
-            <a href="#work">work </a>
-          </li>
-          <li>
-            <a href="#resume">resume </a>
-          </li>
-          <li>
-            <a href="#contact">contact </a>
-          </li>
-        </ul>
-      </nav>
-    </header>
+    <nav>
+      <div claas="profile">
+        <img src="images/abrar.jpg" alt="profile photo" />
+        <h1>abrar nasser</h1>
+      </div>
+      <ul>
+        <li><a href="#index.html">Home</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#contact">Contact</a></li>
+        <li><a href="#curriculum vitae">curriculum vitae</a></li>
+      </ul>
+    </nav>
     <section id="about">
-      <h1>about</h1>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit,
-        expedita.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit,
-        expedita.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit,
-        expedita.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit,
-        expedita.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit,
-        expedita.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit,
-        expedita.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit,
-        expedita.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit,
-        expedita.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit,
-        expedita.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit,
-        expedita.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit,
-        expedita.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit,
-        expedita.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit,
-        expedita.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit,
-        expedita.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit,
-        expedita.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit,
-        expedita.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit,
-        expedita.
-      </p>
-    </section>
-    <section  id="work">
-      <h1>work</h1>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit,
-        expedita.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit,
-        expedita.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit,
-        expedita.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit,
-        expedita.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit,
-        expedita.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit,
-        expedita.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit,
-        expedita.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit,
-        expedita.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit,
-        expedita.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit,
-        expedita.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit,
-        expedita.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit,
-        expedita.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit,
-        expedita.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit,
-        expedita.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit,
-        expedita.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit,
-        expedita.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit,
-        expedita.
-      </p>
-    </section id="resume">
-    <section>
-      <h1>resume</h1>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit,
-        expedita.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit,
-        expedita.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit,
-        expedita.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit,
-        expedita.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit,
-        expedita.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit,
-        expedita.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit,
-        expedita.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit,
-        expedita.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit,
-        expedita.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit,
-        expedita.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit,
-        expedita.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit,
-        expedita.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit,
-        expedita.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit,
-        expedita.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit,
-        expedita.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit,
-        expedita.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit,
-        expedita.
-      </p>
+      <p>Hi,I'am abrar , nice to meet you!</p>
+      <div>
+        <p>
+          i'am a new devellepeur and i'am trying to do my best in this couse
+          with go my code
+        </p>
+      </div>
     </section>
     <section id="contact">
-      <h1>contact</h1>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit,
-        expedita.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit,
-        expedita.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit,
-        expedita.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit,
-        expedita.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit,
-        expedita.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit,
-        expedita.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit,
-        expedita.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit,
-        expedita.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit,
-        expedita.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit,
-        expedita.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit,
-        expedita.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit,
-        expedita.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit,
-        expedita.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit,
-        expedita.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit,
-        expedita.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit,
-        expedita.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit,
-        expedita.
-      </p>
+      <p>this is my contact :</p>
+      <div>
+        <p>number:24791119</p>
+
+        <a href="email"> abrarnasser790@gmail.com:</a>
+      </div>
+    </section>
+
+    <section id="curriculum vitae">
+      <p>mon cv :</p>
+
+      <a href="abrar nasser_BCC.pdf" download>ce lien telecharger le fichier</a>
     </section>
   </body>
-  <footer>
-  
-      <p>Posted by: abrar nasser </p>
-      <p>Contact information: <a href="mailto:abrarnasser790@gmail.com">
-     abrarnasser790@gmail.com</a>.</p>
-    
-  </footer>
 </html>
